/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax="proto2";
package com.dremio.dac.proto.model.dataset;

option java_package = "com.dremio.dac.proto.model.dataset";
option optimize_for = SPEED;

option java_outer_classname = "DatasetProtobuf";

enum VersionContextType {
  BRANCH = 0;
  TAG = 1;
  COMMIT = 2;
}

message VersionContext {
  required VersionContextType type = 1;
  required string value = 2;
}

message SourceVersionReference {
  required string sourceName = 1;
  required VersionContext reference = 2;
}
